--- a/_includes/home.liquid
+++ b/_includes/home.liquid
@@ -12,8 +12,8 @@
     <link rel="apple-touch-icon" sizes="120x120" href="/images/favicon-120x120.png?v=6"/>
     <link rel="apple-touch-icon" sizes="152x152" href="/images/favicon-152x152.png?v=6"/>
     <meta name="apple-mobile-web-app-title" content="{{ metadata.title }}"/>
-    <link href="https://github.com/donswelt" rel="me"/>
-    <link href="mailto:thartmann@posteo.de" rel="me"/>
+    <link href="https://github.com/your_github_name" rel="me"/>
+    <link href="mailto:your_mail@posteo.de" rel="me"/>
     <link type="application/atom+xml" rel="alternate" href="{{ metadata.url }}/feed.xml" title="{{ metadata.title }}"/>
 </head>
 
@@ -21,16 +21,16 @@
         <div class="main">
         <div class="header">
         <a href="{{ metadata.url }}/"><b>{{ metadata.title }}</b></a> <span class="heart">&hearts;</span>
-        <a href="{{ metadata.url }}/about/">Wer!?</a> &middot;
-        <a href="{{ metadata.url }}/rolle/">Rolle</a> &middot;
-        <a href="{{ metadata.url }}/rap/">Rap</a>
+        <a href="{{ metadata.url }}/about/">About</a> &middot;
+        <a href="{{ metadata.url }}/page2/">Rolle</a> &middot;
+        <a href="{{ metadata.url }}/page3/">Rap</a>
         </div>
         
        {{ content }}
 
         <div class="footer">
         Dieses Blog  <a href="{{ metadata.url }}/feed.xml">abonnieren</a>.<br>
-        Dieses Blog  <a href="https://www.paypal.me/donswelt">unterstützen</a>.<br>
+        Dieses Blog  <a href="https://www.paypal.me/your_paypal_lik">unterstützen</a>.<br>
         Oder bloß das olle <a href="{{ metadata.url }}/imprint/">Impressum</a> lesen.<br>
         Mit <a href="https://www.11ty.dev">11ty</a> gebaut und auf <a href="https://uberspace.de">Uberspace</a> gehostet.
         </div>
