--- a/_includes/home.liquid
+++ b/_includes/home.liquid
@@ -22,8 +22,8 @@
         <div class="header">
         <a href="{{ metadata.url }}/"><b>{{ metadata.title }}</b></a> <span class="heart">&hearts;</span>
         <a href="{{ metadata.url }}/about/">About</a> &middot;
-        <a href="{{ metadata.url }}/page2/">Rolle</a> &middot;
-        <a href="{{ metadata.url }}/page3/">Rap</a>
+        <a href="{{ metadata.url }}/page2/">Page 2</a> &middot;
+        <a href="{{ metadata.url }}/page3/">Page 3</a>
         </div>
         
        {{ content }}
